# pyspedas

./: .coveragerc  .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  .travis.yml  .travisreqs.txt  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE.txt  MANIFEST.in  README.md  pyproject.toml  pyproject_pdm.toml  requirements.txt  setup.py
.github/workflows/: codeql-analysis.yml  full_coverage.yml  phep3-compliance.yml  pyhc-environment-compatibility.yml  pythonpackage.yml  quick_tests.yml  release_pypi.yml  test_sdist_files.yml
analysis_tools/: avg_data_validate.tplot
docs/: requirements.txt
docs/source/: ace.rst  adminguide.rst  akebono.rst  analysis.rst  avg_data.rst  barrel.rst  cdaweb.rst  clean_spikes.rst  cluster.rst  cluster_analysis.rst  cnofs.rst  conf.py  contributing.rst  coords.rst  csswe.rst  de2.rst  dev_pycharm.rst  dev_vscode.rst  devguide.rst  dscovr.rst  elfin.rst  equator-s.rst  erg.rst  erg_analysis.rst  examples_and_tutorials.rst  fast.rst  geomagnetic_indices.rst  geopack.rst  geotail.rst  getting_help.rst  getting_started.rst  goes.rst  hapi.rst  image.rst  index.rst  interpolation.rst  kompsat.rst  kyoto.rst  lanl.rst  maven.rst  (+38 more)
pyspedas/: __init__.py  dates.py  helpers.py  load_data.py  prefs.py  spd_prefs_txt.py  version.py
pyspedas/ace/: README.md  __init__.py  config.py  cris.py  datasets.py  epam.py  load.py  mfi.py  sepica.py  sis.py  swe.py  swics.py  uleis.py
pyspedas/akebono/: __init__.py  load.py  load_csv_file.py  orb.py  orb_postprocessing.py  pws.py  pws_postprocessing.py  rdm.py  rdm_postprocessing.py
pyspedas/analysis/: README.md  avg_data.py  clean_spikes.py  deriv_data.py  dpwrspc.py  find_magnetic_nulls.py  interp_gap.py  lingradest.py  neutral_sheet.py  rebin.py  reduce_tres.py  roundsig.py  subtract_average.py  subtract_median.py  tclip.py  tcrossp.py  tdeflag.py  tdotp.py  tdpwrspc.py  time_clip.py  time_domain_filter.py  tinterpol.py  tnormalize.py  tsmooth.py  tvectot  tvectot.py  twavpol.py  wav_data.py  wave_signif.py  wavelet.py  wavelet2.py  wavelet98.py  wavetest.py  yclip.py
pyspedas/barrel/: README.md  __init__.py  config.py  ephm.py  fspc.py  hkpg.py  load.py  magn.py  mspc.py  rcnt.py  spec.py  sspc.py
pyspedas/cdagui/: cdagui.py  cdaweb.py  config.py
pyspedas/cdagui_tools/: cdagui.py  cdaweb.py  config.py
pyspedas/cluster/: README.md  __init__.py  aspoc.py  cis.py  config.py  dwp.py  edi.py  efw.py  fgm.py  load.py  load_csa.py  peace.py  rapid.py  staff.py  wbd.py  whi.py
pyspedas/cnofs/: __init__.py  load.py  plp.py  vefi.py
pyspedas/cotrans/: cart2spc.py  cotrans.py  cotrans_get_coord.py  cotrans_lib.py  cotrans_set_coord.py  fac_matrix_make.py  gsm2lmn.py  matrix_array_lib.py  minvar.py  minvar_matrix_make.py  quaternions.py  sm2mlt.py  tvector_rotate.py  xyz_to_polar.py
pyspedas/cotrans_tools/: cart_to_sphere.py  cotrans.py  cotrans_get_coord.py  cotrans_lib.py  cotrans_set_coord.py  fac_matrix_make.py  igrf.py  j2000.py  lmn_matrix_make.py  lmn_matrx_make.py  minvar.py  minvar_matrix_make.py  quaternions.py  rotmat_get_coords.py  rotmat_set_coords.py  spc2cart.py  sphere_to_cart.py  tvector_rotate.py  xyz_to_polar.py
pyspedas/csswe/: README.md  __init__.py  config.py  datasets.py  load.py  reptile.py
pyspedas/de2/: README.md  __init__.py  load.py
pyspedas/dscovr/: README.md  __init__.py  config.py  load.py
pyspedas/elfin/: __init__.py  config.py  load.py
pyspedas/equator_s/: README.md  __init__.py  config.py  load.py
pyspedas/erg/: README.md  __init__.py  load.py
pyspedas/fast/: README.md  __init__.py  config.py  load.py
pyspedas/geopack/: README.md  __init__.py  calculate_lshell.py  clean_model_parameters.py  generic_geopack_adapters.py  get_tsy_params.py  get_w_params.py  igrf.py  kp2iopt.py  prepare_pos_variable.py  refactored_gp_interface.py  t01.py  t89.py  t89_trace_equator.py  t89_trace_iono.py  t96.py  trace_equator_refactored.py  trace_iono_refactored.py  trace_to_event.py  ts04.py  tt01.py  tt89.py  tt96.py  ttrace2endpoint.py  ttrace2equator.py  ttrrace2iono.py  tts04.py
pyspedas/geotail/: README.md  __init__.py  config.py  datasets.py  load.py  mgf.py
pyspedas/goes/: README.md  __init__.py  config.py  load.py  load_orbit.py
pyspedas/hapi/: hapi.py
pyspedas/hapi_tools/: hapi.py  replace_fillvals.py
pyspedas/image/: README.md  __init__.py  config.py  datasets.py  fuv.py  load.py  mena.py
pyspedas/kompsat/: README.md  load.py
pyspedas/kyoto/: README.md  __init__.py  kyoto_config.py  load_ae.py  load_dst.py  load_geomagnetic_indices.py
pyspedas/lanl/: README.md  __init__.py  config.py  datasets.py  load.py  mpa.py  spa.py
pyspedas/maven/: README.md  __init__.py  access.txt  config.py  download_files_utilities.py  euv.py  file_regex.py  interp_utilities.py  kp.py  kp_utilities.py  lpw.py  mag.py  maven_kp_to_tplot.py  maven_load.py  orbit_time.py  read_iuvs_file.py  read_iuvs_file_unused_modes.py  res.py  sep.py  sta.py  swe.py  swea.py  swia.py  utilities.py
pyspedas/mica/: README.md  __init__.py  config.py  load.py
pyspedas/mms/: README.md  __init__.py  mms_config.py  mms_events.py  mms_file_filter.py  mms_files_in_interval.py  mms_get_local_files.py  mms_load_brst_segments.py  mms_load_data.py  mms_load_data_spdf.py  mms_load_fast_segments.py  mms_load_sroi_segments.py  mms_login_lasp.py  mms_orbit_plot.py  mms_overview_plot.py  (+5 more)
pytplot/: Interactive2DPlot.py  TESTING.py  TVarFigure1D.py  TVarFigure2D.py  TVarFigureAlt.py  TVarFigureSpec.py  Testing2.py  __init__.py  cdf_to_tplot.py  clean_spikes.py  cleanup_files.py  clip.py  colorbarsidetitle.coffee  colorbarsidetitle.py  count_traces.py  data_att_getters_setters.py  data_exists.py  databar.py  degap.py  del_data.py  format_sandbox.py  get_data.py  get_timespan.py  get_ylimits.py  interactive2dPlot.py  interactiveplot.py  is_pseudovariable.py  link.py  netcdf_to_tplot.py  options.py  overplot.py  replace_data.py  replace_metadata.py  spec_slicer.py  staticplot.py  staticplot_tavg.py  store_data.py  time_double.py  time_string.py  timebar.py  (+26 more)
(+1597 files in other folders)
