[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyspedas"
version = "2.0.4a1"
description = "Python Space Physics Environment Data Analysis Software (pySPEDAS)"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.9"
license = "MIT"
authors = [
    {name = "Jim Lewis", email = "jwl@ssl.berkeley.edu"},
]
keywords = [
    "SPEDAS",
    "data",
    "tools",
    "space physics",
    "data analysis",
    "space science",
    "scientific computing",
    "time series analysis",
    "data visualization",
    "satellite data",
    "magnetosphere",
    "ionosphere",
    "heliophysics",
    "geophysics",
    "remote sensing",
    "astrophysics",
    "solar physics",
    "space weather",
    "data retrieval",
    "NASA",
    "NOAA",
    "ESA",
    "JAXA",
    "HSO",
    "CDF",
    "ISTP",
    "netCDF",
    "Python package",
    "THEMIS",
    "ARTEMIS",
    "MMS",
    "ERG",
    "Arase",
    "ACE",
    "MAVEN",
    "RBSP",
    "Van Allen Probes",
    "GOES",
    "POES",
    "Cluster",
    "OMNIWeb",
    "aurora",
    "geomagnetic index",
    "Kp index",
    "AE index",
    "magnetic field models",
    "Tsyganenko",
    "IGRF",
    "geopack",
    "magnetotelluric",
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy>=1.20.0",
    "requests>=2.31.0",
    "geopack>=1.0.12",
    "scipy>=1.11.1",
    "cdflib>=1.0.0",
    "spacepy>=0.5.0",
    "cdasws>=1.7.24",
    "netCDF4>=1.6.2",
    "pywavelets>=1.4.1",
    "astropy>=5.3.1",
    "hapiclient>=0.2.2",
    "fsspec>=2023.9.0",
    "s3fs>=2023.9.0",
    "aioboto3>=11.1.1",
    "pandas>=2.0.3",
    "matplotlib>=3.6.2",
    "xarray>=2023.7.0",
]

[project.urls]
Homepage = "https://github.com/spedas/pyspedas"
Information = "https://spedas.org/wiki/"
Documentation = "https://pyspedas.readthedocs.io"
Issue_Tracker = "https://github.com/spedas/pyspedas/issues"
Source_Code = "https://github.com/spedas/pyspedas"

[tool.setuptools]
packages = {find = {exclude = ["contrib", "docs", "tests*"]}}
include-package-data = true

[tool.setuptools.package-data]
"*"=["*.md","LICENSE.txt"]
"pyspedas.projects.mms.feeps_tools.sun" = ["*.csv"]
"pyspedas.projects.mms.mec_tools" = ["*.png"]
"pyspedas.projects.elfin.epd" = ["el*_epde_cal_data.txt"]
"pyspedas.projects.elfin.tests" = ["test_epde_cal_data.txt"]

# --- End-user selectable extras (go into wheel metadata) ---

[project.optional-dependencies]
mth5  = ["mth5","obspy", "mt-metadata"]
vires = ["viresclient"]
maps  = ["basemap"]
# convenience group to get everything
all = ["mth5", "obspy", "mt-metadata", "viresclient", "basemap"]

# --- Development dependencies, not in wheel metadata, for PySPEDAS devs, CI workflows, etc

[dependency-groups]
lint = [
    "ruff>=0.12.10",
    "flake8>=7.3.0",
]
doc = [
    "sphinx>=1.7.6",
    "sphinx-rtd-theme>=3.0.2",
]
jupyter = [
    "jupyter>=1.1.1",
    "nbdime>=4.0.2",
]
depend = [
    "uv>=0.8.13",
]
test = [
    "moto[server]>=5.1.11",
]
setup = [
    "setuptools>=80.9.0",
    "build>=1.3.0",
    "wheel>=0.45.1",
    "pip>=25.2",
    "pdm-bump>=0.9.12",
]

# Ruff linter configuration -- mostly the defaults, with just a few changes
[tool.ruff]

line-length = 127
indent-width = 4

# Assume Python 3.9
target-version = "py39"

[tool.ruff.lint]

select = ["E4", "E7", "E9", "F", "C9", "W"]
ignore = []

